# ECO

./: CMakeLists.txt  README.md  build.sh  func_test.cpp  main.cpp  package.xml  test_720p.cpp  test_localization.cpp  test_sample_space_update.cpp  test_train_joint.cpp  vot100_test.cpp
include/: config.hpp  eco_assert.h  matlab_func.hpp  type.hpp
include/feat_extra/: cnf.hpp  feature.hpp  fhog.hpp
include/feature_extraction/: hog.h
include/implements/: sample_space.hpp  scale_filter.hpp  tracker.hpp  train.hpp
resource/: ICnorm.txt  config.cfg
src/: config.cpp  matlab_func.cpp  test_ensure.cpp
src/feat_extra/: cnf.cpp  fhog.cpp
src/feature_extraction/: hog.cpp
src/implements/: sample_space.cpp  scale_filter.cpp  tracker.cpp  train.cpp
